# query_opt

./: .gitignore  Cargo.toml  README.md
distributed/: Cargo.toml
distributed/src/: coordinator.rs  fragment.rs  lib.rs  partition.rs  planner.rs  rewrite.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
execution/: Cargo.toml
execution/src/: engine.rs  evaluator.rs  helpers.rs  in_memory_engine.rs  lib.rs  materialized.rs  memory_table.rs  stream.rs
expr/: Cargo.toml
expr/src/: expr.rs  lib.rs  schema.rs  statistics.rs  types.rs
optimizer/: Cargo.toml
optimizer/src/: aggregate_elimination.rs  aggregate_merge.rs  aggregate_pushdown.rs  common_subexpr_elimination.rs  constant_folding.rs  constant_propagation.rs  cost_model.rs  decorrelation.rs  distinct_to_aggregate.rs  eliminate_cross_join.rs  filter_merge.rs  join_commutation.rs  join_elimination.rs  join_reorder.rs  join_type_conversion.rs  lib.rs  limit_pushdown.rs  null_propagation.rs  optimizer.rs  predicate_decomposition.rs  predicate_simplification.rs  projection_elimination.rs  propagate_empty_relation.rs  push_down_filter.rs  push_down_projection.rs  scalar_subquery_flattening.rs  single_distinct_to_groupby.rs  sort_elimination.rs  subquery_to_join.rs  transitive_predicate.rs  type_coercion.rs  union_merge.rs  unwrap_cast_in_comparison.rs
physical-plan/: Cargo.toml
physical-plan/src/: lib.rs  (+2 more)
row/: Cargo.toml
sql-parser/: Cargo.toml
src/: main.rs  pretty_print.rs
storage/: Cargo.toml
storage/src/: catalog.rs  engine.rs  lib.rs  materializer.rs  read.rs  table.rs  write.rs
(+24 files in other folders)
