# [File 01] Workspace manifest
[workspace]
members = ["expr", "optimizer", "physical-plan", "execution"]
resolver = "2"

[package]
name = "query_opt"
version = "0.1.0"
edition = "2021"

[dependencies]
expr = { path = "expr" }
optimizer = { path = "optimizer" }
physical-plan = { path = "physical-plan" }
execution = { path = "execution" }
