[workspace]
members = ["expr", "optimizer", "physical-plan", "execution", "storage", "sql-parser", "distributed", "row"]
resolver = "2"

[package]
name = "query_opt"
version = "0.1.0"
edition = "2021"

[dependencies]
expr = { path = "expr" }
optimizer = { path = "optimizer" }
physical-plan = { path = "physical-plan" }
execution = { path = "execution" }
storage = { path = "storage" }
sql-parser = { path = "sql-parser" }
rustyline = "15"
