[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
expr = { path = "../expr" }
row = { path = "../row" }
execution = { path = "../execution" }
physical-plan = { path = "../physical-plan" }
rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
tempfile = "3"
